Updated all links to correct paths.

--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,6 @@
   font-style: normal;
 }
 
-
-
 /*[VIEWERS]DO NOT MODIFIY COPY RAW FILE FOR NEED TO MODIFY*/
 /* General Styles */
 * {
@@ -49,41 +47,6 @@ header {
     animation-iteration-count: 1;
 }
 
-/*Update panel*/
-/*
-.update-panel {
-    margin-left: auto;
-    margin-right: auto;
-    width: 200px;
-    height: auto;
-    margin-bottom: 20px;
-    border: 2px solid black;
-    padding: 0.5px;
-    border-radius: 10px;
-    background: linear-gradient(to bottom right, white, beige);
-    box-shadow: 0 0 10px 2.5px gold;
-}
-
-
-.update-title {
-    text-align: center;
-    font-size: 15px;
-    color:  gold;
-    animation-name: blink;
-    animation-timing-function: linear;
-    animation-duration: 2.5s;
-    animation-iteration-count: infinite;
-    border-radius: 10px;
-    font-weight: bold;
-}
-
-.update-info {
-    font-weight: bold;
-    color: black;
-    margin-top: 5px;
-    font-weight: bold;
-}
-*/
 /*Start of Nav links*/
 .nav-item {
     font-size: 1.6rem;
@@ -108,15 +71,13 @@ header {
     color: white;
 }
 
-
-
 /* slogan Section */
 .slogan-container {
-    background: url(/images/main.jpg) no-repeat center center/cover;
+    background: url(/Assets/main.jpg) no-repeat center center/cover;
 }
 
 .slogan {
-    background: url(/images/mom.jpg) no-repeat center center/cover;
+    background: url(Assets/mom.jpg) no-repeat center center/cover;
     height: 600px;
     width: 100%;
     color: black;
@@ -142,7 +103,7 @@ header {
 
 /* Menu Section */
 .menu-container {
-    background: url(/images/bean\ pattern.jpg) no-repeat center center/cover;
+    background: url(Assets/bean\ pattern.jpg) no-repeat center center/cover;
 }
 
 .menu-title {
@@ -195,7 +156,7 @@ header {
 
 /*Catering section*/
 .cater-container {
-    background: url(/images/bean\ pattern.jpg) no-repeat center center/cover;
+    background: url(Assets/bean\ pattern.jpg) no-repeat center center/cover;
 }
 
 .cater-img {
@@ -242,7 +203,7 @@ header {
 /*Review styling*/
 
 .review-container {
-    background: url(/images/main.jpg) no-repeat center center/cover;
+    background: url(Assets/main.jpg) no-repeat center center/cover;
 }
 
 .review-title {
@@ -307,7 +268,7 @@ button > a:visited {
 
 /* Footer */
 .footer-container {
-    background: url(/images/main.jpg) no-repeat center center/cover;
+    background: url(Assets/main.jpg) no-repeat center center/cover;
 }
 
 .footer-img {
